--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -84,6 +84,11 @@ h1 {
 
 }
 
+.form-label {
+	display: block;
+	margin-bottom: 10px;
+}
+
 
 /* ---------- INPUT FIELD ---------- */
 
@@ -110,6 +115,74 @@ h1 {
 	border-color: rgb(75, 46, 139);
 	outline: 0;
 	color: #391c78;
+}
+
+/* ---------- TABLE ---------- */
+
+td {
+  text-align: center;
+  vertical-align: middle;
+}
+
+.table-scroll {
+	display: block;
+	empty-cells: show;
+
+	/* Decoration */
+	border-spacing: 0;
+	border: 1px solid;
+	margin: 20px auto;
+}
+
+.table-scroll thead {
+	background-color: #f1f1f1;
+	position: relative;
+	display: block;
+	width: 100%;
+}
+
+.table-scroll tbody {
+	/* Position */
+	display: block;
+	position: relative;
+	width: 100%;
+	overflow-y: scroll;
+	/* Decoration */
+	border-top: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.table-scroll tr {
+	width: 100%;
+	display: flex;
+}
+
+.table-scroll td,
+.table-scroll th {
+	flex-basis: 100%;
+	flex-grow: 2;
+	display: block;
+	padding: 1rem;
+	text-align: left;
+}
+
+/* Other options */
+
+.table-scroll.small-first-col td:first-child,
+.table-scroll.small-first-col th:first-child {
+	flex-basis: 25%;
+	flex-grow: 1;
+}
+
+.table-scroll tbody tr:nth-child(2n) {
+	background-color: rgba(130, 130, 170, 0.1);
+}
+
+.body-half-screen {
+	max-height: 50vh;
+}
+
+.small-col {
+	flex-basis: 10%;
 }
 
 /* ---------- BUTTON ---------- */
