--- a/resources/css/pages.css
+++ b/resources/css/pages.css
@@ -139,3 +139,54 @@ body {
 	margin: 30px auto;
 	display: none;
 }
+
+
+
+/*------------------------------------------------------*/
+
+/* STATS */
+
+/*------------------------------------------------------*/
+
+
+
+#show-stats, #stats-table{
+	width: 80%;
+	margin: 30px auto;
+}
+
+
+#stats-table {
+	display:none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
