--- a/resources/css/pages.css
+++ b/resources/css/pages.css
@@ -122,20 +122,71 @@ body {
 
 /*------------------------------------------------------*/
 
-/* COURSES */
+/* COURSES & STUDENTS */
 
 /*------------------------------------------------------*/
 
-#courses-table {
+#courses-table, #students-table {
 	width: 80%;
 	margin: 30px auto;
 }
-#courses-table a {
+#courses-table a,  #students-table a{
 	text-align: center;
 }
 
-#add-course {
+#add-course, #edit-course, #add-student{
 	width: 80%;
 	margin: 30px auto;
 	display: none;
 }
+
+
+
+/*------------------------------------------------------*/
+
+/* STATS */
+
+/*------------------------------------------------------*/
+
+
+
+#show-stats, #stats-table{
+	width: 80%;
+	margin: 30px auto;
+}
+
+
+#stats-table {
+	display:none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
