--- a/resources/css/pages.css
+++ b/resources/css/pages.css
@@ -121,6 +121,38 @@ body {
 	margin-top: 30px;
 }
 
+/*------------------------------------------------------*/
+
+/* PROFILE */
+
+/*------------------------------------------------------*/
+
+.row-profile {
+	width: 100%;
+	padding: 3%;
+}
+#profile-pic img {
+	display: block;
+	margin: 0 auto;
+	width: 100%;
+	height: auto;
+}
+
+.img {
+  position: relative;
+  cursor:pointer;
+}
+.img input[type="file"] {
+  cursor:pointer;
+  top: 0;
+  right: 0;
+  opacity: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+
 
 /*------------------------------------------------------*/
 
